--- a/css/home.css
+++ b/css/home.css
@@ -4,7 +4,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-  background-image: url(../images/log.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)) ,url(../images/log.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -17,4 +17,7 @@ body {
     background-color: rgba(0, 0, 0, 0.39);
     box-shadow: 0px 0px 20px white;
 
+}
+.log_out {
+  cursor: pointer;
 }
